--- a/force-app/main/default/classes/ExpensesController.cls
+++ b/force-app/main/default/classes/ExpensesController.cls
@@ -9,4 +9,48 @@ global with sharing class ExpensesController {
         return con;
         
     }
+
+    @AuraEnabled
+    public static MonthlyExpense__c getMouthlyExpense(String conId, String month, String year){
+
+        Date myDate = Date.newInstance(2019, 12, 10);
+                
+        MonthlyExpense__c monthlyExpense = [SELECT Balance__c, MonthDate__c FROM MonthlyExpense__c WHERE Keeper__c =:conId LIMIT 1];
+             
+
+        System.debug(' MonthlyExpense__c ' + monthlyExpense);
+
+        return monthlyExpense;
+        
+    }
+
+    @AuraEnabled
+    public static Map<Date, List<ExpenseCard__c>> getExpenseCard(){
+
+        Map<Date, List<ExpenseCard__c>> m1 = new Map<Date, List<ExpenseCard__c>>();
+
+        Set<Date> dates = new Set<Date>();
+        for(AggregateResult ar : [SELECT CardDate__c FROM ExpenseCard__c GROUP BY CardDate__c]){
+            dates.add((Date) ar.get('CardDate__c'));    
+        }
+        ExpenseCard__c[] expenseCards = [SELECT CardDate__c, Description__c, Amount__c FROM ExpenseCard__c WHERE CardDate__c IN :dates];
+
+        for (Date dd : dates){
+                List<ExpenseCard__c> ex = new List<ExpenseCard__c>();
+            for(ExpenseCard__c xx : expenseCards){
+                if(dd == xx.CardDate__c){
+                    ex.add(xx);
+                }
+            }
+                m1.put(dd,ex);
+        }
+
+	
+       System.debug('m1 ' + m1); 
+
+
+        return m1;
+        
+    }
+
 }
