old controller map

--- a/force-app/main/default/classes/ExpensesController.cls
+++ b/force-app/main/default/classes/ExpensesController.cls
@@ -13,11 +13,8 @@ global with sharing class ExpensesController {
     @AuraEnabled
     public static MonthlyExpense__c getMouthlyExpense(String conId, String month, String year){
 
-        Date myDate = Date.newInstance(2019, 12, 10);
-                
-        MonthlyExpense__c monthlyExpense = [SELECT Balance__c, MonthDate__c FROM MonthlyExpense__c WHERE Keeper__c =:conId LIMIT 1];
-             
-
+        Date myDate = Date.newInstance(2019, 12, 10);                
+        MonthlyExpense__c monthlyExpense = [SELECT Balance__c, MonthDate__c FROM MonthlyExpense__c WHERE Keeper__c =:conId LIMIT 1];            
         System.debug(' MonthlyExpense__c ' + monthlyExpense);
 
         return monthlyExpense;
@@ -25,7 +22,7 @@ global with sharing class ExpensesController {
     }
 
     @AuraEnabled
-    public static Map<Date, List<ExpenseCard__c>> getExpenseCard(){
+    public static   Map<Date, List<ExpenseCard__c>> getExpenseCard(){
 
         Map<Date, List<ExpenseCard__c>> m1 = new Map<Date, List<ExpenseCard__c>>();
 
@@ -44,6 +41,29 @@ global with sharing class ExpensesController {
             }
                 m1.put(dd,ex);
         }
+
+        // Map<Date, Map<Decimal, List<ExpenseCard__c>>> m1 = new Map<Date, Map<Decimal, List<ExpenseCard__c>>>();
+
+        //     Set<Date> dates = new Set<Date>();
+        //     for(AggregateResult ar : [SELECT CardDate__c FROM ExpenseCard__c GROUP BY CardDate__c]){
+        //         dates.add((Date) ar.get('CardDate__c'));    
+        //     }
+        //     ExpenseCard__c[] expenseCards = [SELECT CardDate__c, Description__c, Amount__c FROM ExpenseCard__c WHERE CardDate__c IN :dates];
+
+        //     for (Date dd : dates){
+        //             Map<Decimal, List<ExpenseCard__c>> ex = new Map<Decimal, List<ExpenseCard__c>>();
+        //             Decimal summ = 0;
+        //         List<ExpenseCard__c> listEx = new List<ExpenseCard__c>();
+        //         for(ExpenseCard__c xx : expenseCards){
+                    
+        //             if(dd == xx.CardDate__c){
+        //                 listEx.add(xx);
+        //                 summ = summ + xx.Amount__c;
+        //             }        
+        //         }
+        //         ex.put(summ,listEx);
+        //             m1.put(dd,ex);
+        //     }
 
 	
        System.debug('m1 ' + m1); 
