add array admin page

--- a/force-app/main/default/classes/AdminController.cls
+++ b/force-app/main/default/classes/AdminController.cls
@@ -2,46 +2,30 @@ public with sharing class AdminController {
 
      public class MonthlyExpense{       
         @AuraEnabled
-        public String office;   
+        public List<cls_office> officeList; 
+        @AuraEnabled
+        public Decimal summ;     
+        @AuraEnabled
+        public List<MonthlyExpense__c> monthlyExpenseList;
+        @AuraEnabled
+        public List<List<String>> dataList;
+    } 
+
+    public class cls_office{
+        @AuraEnabled
+        public String officeName;
+        @AuraEnabled
+        public Decimal totalAmount;
+        @AuraEnabled
+        public Decimal monthlyAverage;
         @AuraEnabled
         public Decimal balanceNow;
         @AuraEnabled
-        public Decimal monthlyAverage;   
-        @AuraEnabled
-        public Decimal totalAmount;  
-        @AuraEnabled
-        public Decimal summ;      
-        @AuraEnabled
-        public List<MonthlyExpenseWrapper> monthlyExpenseList;
+        public Decimal totalSumm;
     }
 
-    public class MonthlyExpenseWrapper implements Comparable {
-
-        @AuraEnabled
-        public MonthlyExpense__c oppy;    
-        // Constructor
-        public MonthlyExpenseWrapper(MonthlyExpense__c op) {
-            oppy = op;
-        }    
-        // Compare opportunities based on the opportunity amount.
-        public Integer compareTo(Object compareTo) {
-            // Cast argument to OpportunityWrapper
-            MonthlyExpenseWrapper compareToOppy = (MonthlyExpenseWrapper)compareTo;        
-            // The return value of 0 indicates that both elements are equal.
-            Integer returnValue = 0;
-            if (oppy.MonthDate__c > compareToOppy.oppy.MonthDate__c) {
-                // Set return value to a positive value.
-                returnValue = 1;
-            } else if (oppy.MonthDate__c < compareToOppy.oppy.MonthDate__c) {
-                // Set return value to a negative value.
-                returnValue = -1;
-            }        
-            return returnValue;       
-        }
-}
-
     @AuraEnabled
-    public static List<MonthlyExpense> getMouthlyExpense(Integer selectedDate){
+    public static MonthlyExpense getMouthlyExpense(Integer selectedDate){
 
         System.debug('getMouthlyExpenseDATEadmin= ' + selectedDate);
 
@@ -51,39 +35,90 @@ public with sharing class AdminController {
         }
         System.debug('contactOfficeList ' + contactOfficeList);    
 
-        List<Contact> monthlylist = [SELECT id, office__c, (SELECT id, balance__c, MonthDate__c, SpentAmount__c, Reminder__c FROM MonthlyExpenses__r WHERE CALENDAR_YEAR(MonthDate__c) =:selectedDate) FROM Contact WHERE admin__c = false AND office__c IN :contactOfficeList];   
+        List<Contact> monthlylist = [SELECT id, office__c, (SELECT id, balance__c, MonthDate__c, SpentAmount__c, Reminder__c FROM MonthlyExpenses__r WHERE CALENDAR_YEAR(MonthDate__c) =:selectedDate) FROM Contact WHERE admin__c = false AND office__c IN :contactOfficeList ORDER BY office__c ASC];   
         System.debug('monthlylist= ' + monthlylist);
-        System.debug('monthlylist[0]= ' + monthlylist[0].MonthlyExpenses__r[0].balance__c);
         
 
-        List<MonthlyExpense> monthlyExpenseOfficeList = new List<MonthlyExpense>();
+        MonthlyExpense monthlyExpenseOfficeList = new MonthlyExpense();
 
+        List<List<String>> dataList = new List<List<String>>();
+
+        for(Integer i = 1; i<=12; i++){ 
+            Date dt = Date.newInstance(selectedDate, i, 01);                                
+            dataList.add(new List<String>());
+            dataList.get(i-1).add(string.valueof(dt));                      
+        }    
+        System.debug('dataList= ' + dataList );   
         
-
-        for (Contact c:monthlylist ){
-            MonthlyExpenseWrapper[] oppyList = new List<MonthlyExpenseWrapper>(); 
-            MonthlyExpense monthlyExpense = new MonthlyExpense();
-            monthlyExpense.balanceNow = 0;
-            monthlyExpense.totalAmount = 0; 
-            monthlyExpense.monthlyAverage = 0;
-                        
+        MonthlyExpense monthlyExpense = new MonthlyExpense();
+        Integer y = 0;
+        List<cls_office> officeList = new List<cls_office>();
+        Decimal totalSumm = 0;
+        for (Contact c:monthlylist ){                   
             System.debug('office= ' + c.Office__c);
-            monthlyExpense.office = c.Office__c;
-            for(MonthlyExpense__c details:c.MonthlyExpenses__r){
-                System.debug('mas= ' + details.balance__c);
-                System.debug('MonthDate__c= ' + details.MonthDate__c);
-                monthlyExpense.balanceNow += details.Reminder__c;
-                monthlyExpense.totalAmount += details.SpentAmount__c;
-                oppyList.add(new MonthlyExpenseWrapper(details));
+            cls_office cls = new cls_office();
+            cls.officeName = c.Office__c;
+            cls.totalAmount = 0;
+            cls.balanceNow = 0;
+            for(Integer i = 0; i<12; i++){ 
+                for(MonthlyExpense__c details:c.MonthlyExpenses__r){
+                    System.debug('MonthDate__c= ' + details.MonthDate__c);
+                    
+                    
+                    if(Date.valueOf(dataList[i][0]) == details.MonthDate__c){
+                        cls.balanceNow += details.Reminder__c;
+                        cls.totalAmount += details.SpentAmount__c;
+                        System.debug('mes ==' );
+                        dataList.get(i).add(string.valueof(details.SpentAmount__c));
+                    }
+                }
+                //dataList.get(y).add('0');
+                if(dataList[i].size() == y+1){
+                    dataList.get(i).add('0');
+                }
             }
-            monthlyExpense.monthlyExpenseList = oppyList;  
-            monthlyExpenseOfficeList.add(monthlyExpense);
+            y++;
+            cls.monthlyAverage = cls.totalAmount/2;
+            totalSumm += cls.totalAmount;
+            officeList.add(cls);
         }
+        System.debug('dataList2= ' + dataList );
 
-          
-        System.debug('monthlyExpenseList= ' + monthlyExpenseOfficeList);
+        for(Integer i = 0; i < 12; i++){
+            Decimal summ = 0;
+            for(Integer n = 1; n < 4; n++){
+                summ += decimal.valueOf(dataList[i][n]); 
+                System.debug(dataList[i][n]);
+                
+            }
+            dataList[i].add(string.valueof(summ));
+        }
+        System.debug('officeList2019=' + officeList);
 
-        return monthlyExpenseOfficeList;        
+        //load data previous year
+        Integer selectedDatePr = selectedDate - 1;
+        List<Contact> monthlylistPrevousYear = [SELECT id, office__c, (SELECT id, balance__c, MonthDate__c, SpentAmount__c, Reminder__c FROM MonthlyExpenses__r WHERE CALENDAR_YEAR(MonthDate__c) =:selectedDatePr) FROM Contact WHERE admin__c = false AND office__c IN :contactOfficeList ORDER BY office__c ASC];   
+        System.debug('monthlylistPrevousYear=' + monthlylistPrevousYear);
+        Integer i = 0; 
+        for (Contact c:monthlylistPrevousYear){                          
+            Decimal balansePrevious = 0;
+            for(MonthlyExpense__c details:c.MonthlyExpenses__r){
+                System.debug('details.MonthDate__c= ' + details.MonthDate__c);
+                System.debug('details.Reminder__c= ' + details.Reminder__c);    
+                balansePrevious += details.Reminder__c;                
+            }           
+            officeList[i].balanceNow += balansePrevious;
+            i++;                        
+        }
+        System.debug('officeList2019+2018=' + officeList);
+
+        monthlyExpense.dataList = dataList;
+        monthlyExpense.officeList = officeList;
+        monthlyExpense.summ = totalSumm;  
+        System.debug('monthlyExpense= ' + monthlyExpense);
+      
+
+        return monthlyExpense;      
     }
     
 }
